# TTS

./: .gitignore  README.md  Read.md  commit_msg.txt  setup.py
android/: README.md  gradle.properties  local.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/k2fsa/sherpa/tts/: AudioHistoryStoreTest.kt  AudioMetadataReaderTest.kt  TtsRuEspeakSmokeTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  espeak_phonemize.cpp  espeak_phonemize.h  frontend_router.cpp  frontend_router.h  lexicon.cpp  lexicon.h  token_table.cpp  token_table.h  tts_jni.cpp  vits_engine.cpp  vits_engine.h  wave_writer.cpp  wave_writer.h
android/app/src/main/cpp/cmake/: espeak-ng-for-piper.cmake  piper-phonemize.cmake
android/app/src/main/java/com/k2fsa/sherpa/tts/data/: GeneratedAudio.kt  TTSConfig.kt
android/app/src/main/java/com/k2fsa/sherpa/tts/engine/: TTSEngine.kt
android/app/src/main/java/com/k2fsa/sherpa/tts/repository/: TTSRepository.kt
android/app/src/main/java/com/k2fsa/sherpa/tts/ui/history/: HistoryActivity.kt  HistoryAdapter.kt
android/app/src/main/java/com/k2fsa/sherpa/tts/ui/lexicon/: CustomLexiconActivity.kt
android/app/src/main/java/com/k2fsa/sherpa/tts/ui/main/: LatestAudioHandler.kt  MainActivity.kt  MainViewModel.kt  MainViewModelFactory.kt
android/app/src/main/java/com/k2fsa/sherpa/tts/ui/settings/: SettingsActivity.kt
android/app/src/main/java/com/k2fsa/sherpa/tts/util/: AudioFileActions.kt  AudioFormatUtils.kt  AudioHistoryStore.kt  AudioMetadataReader.kt  AudioPlaybackController.kt  DocumentCopyHelper.kt  EspeakDataHelper.kt  TtsPreferences.kt
android/app/src/main/res/drawable/: history_item_bg.xml
android/app/src/main/res/layout/: activity_custom_lexicon.xml  activity_history.xml  activity_main.xml  activity_settings.xml  item_history.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/test/java/com/k2fsa/sherpa/tts/util/: AudioFormatUtilsTest.kt
docs/: design.md  onnxruntime_android.md  project_summary.md  requirements.md  user_guide.md
docs/plans/: 2025-03-10-android-app-reorg-design.md  2025-03-10-android-app-reorg-implementation.md  2026-03-10-android-phase2-docs-implementation.md  2026-03-10-history-feature-cleanup.md
examples/: config.json  demo.py  demo_config.json
lexicons/: russian_to_english.txt
models/espeak-ng-data/: ja_dict  shn_dict
